[project]
name = "skrample"
version = "0.1.0"
description = "get skrampled"
readme = "README.md"
authors = [{ name = "Beinsezii", email = "beinsezii@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["numpy>=2.0", "torch>=2.4"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "accelerate>=1.3",
    "diffusers>=0.32",
    "protobuf>=5.29",
    "pytest>=8.3",
    "sentencepiece>=0.2",
    "transformers>=4.48",
]

[tool.ruff]
line-length = 120
